--- a/roststyrn/roststyrn.csproj
+++ b/roststyrn/roststyrn.csproj
@@ -91,6 +91,7 @@
     </Compile>
     <Compile Include="DeskConfig.cs" />
     <Compile Include="RecognitionEngine.cs" />
+    <Compile Include="RwToDisk.cs" />
     <Compile Include="VoiceCommands.cs" />
     <Compile Include="VoiceControl.cs">
       <SubType>Form</SubType>
